# cpp-metaprogramming

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cpp-metaprogramming/: CMakeLists.txt  class_introspection.hpp  loop_unrolling.hpp  parameter_pack_utils.hpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  class_instrospection_tests.cpp  loop_unrolling_tests.cpp  parameter_pack_utils_tests.cpp
